  [Paolo Tormene]
  * vulnerability and irv: only authenticated superusers can run jasmine tests
  * irv: display the project's title on top of the project definition widget
  * hrde: manage supplemental layers through the "Layer Manager" widget

python-oq-platform (1.5.0)

  [Matteo Nastasi]
  * ript: add "Sites Conditions" tab
  * ript: smarter split procedure
  * ript: grand refactoring
  * ript: add positive integer 'example_id' parameter to load examples and
    at least 1 example for each tab
  * ript: add positive integer 'tab_id' parameter to land on a specific tab
  * ript: add "<?xml..." header line to <textarea> item

  [Paolo Tormene]
  * irv: less redundant calculations and better management of operators
  * irv: when clicking on the map, display in the info box only information
    related to the integrated risk project
  * irv: remove color themes (feature that was not needed and that contained a bug)

python-oq-platform (1.4.1)

  [Matteo Nastasi]
  * ript: fix Aggregated Structural Costs case syntax error

python-oq-platform (1.4.0)

  [Matteo Nastasi]
  * Taxtweb: add platform header and footer (with code rearrangement)
  * Firefox update management to avoid selenium malfunctions
  * Taxtweb: add contextual help system
  * Use oq-risklib as library to check nrml validity
  * Add default group and 'staff' capability for new users
  * Improved selenium test suite with users and secondary profiles
    management

  [Paolo Tormene]
  * irv: fix a bug in the addition of new project definitions, enabling
    to select the added items and removing some delays
  * irv: when adding a new project definition, leverage the svir api to check for
    the uniqueness of the project definition title
  * irv: let the d3 tree layout look like in the QGIS IRMT plugin
  * irv: handle case in which a zone with no available data is clicked on the map
  * irv: when switching project definition, restyle the map accordingly